# my_chat

./: .gitignore  CLAUDE.md  README.md  components.json  manage.py  package.json
back/: .env.example  README.md  pyproject.toml  run.py
back/src/: main.py
back/src/api/: chat.py
back/src/config/: settings.py
back/src/models/: chat.py
back/src/services/: vllm_client.py
front/: README.md  next.config.ts  package-lock.json  package.json
front/src/app/: layout.tsx  page.tsx
front/src/components/: ChatMessage.tsx  ChatPanel.tsx  ChatSkeleton.tsx  LogViewer.tsx  MessageInput.tsx  SamplePrompts.tsx
front/src/config/: env.ts
front/src/constants/: prompts.ts
front/src/hooks/: useChat.ts
front/src/lib/: logger.ts
front/src/services/: api.ts
front/src/types/: chat.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ChatMessage.tsx  ChatPanel.tsx  MessageInput.tsx  SamplePrompts.tsx
src/constants/: prompts.ts
src/services/: api.ts
