[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
]
